# AnyAny

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  anyany.ixx  main.cpp
.github/: FUNDING.yml
.github/workflows/: build_and_test.yml  clang.yml  gcc.yml
examples/: CMakeLists.txt  advanced.hpp  basic_usage.hpp  examples_main.cpp  functional_paradigm.hpp  polyref.hpp  visit_invoke_example.hpp
include/: anyany.hpp  anyany_macro.hpp  data_parallel.hpp  data_parallel_vector.hpp  memory_resource.hpp  type_descriptor.hpp  utility.hpp  variant_swarm.hpp  visit_invoke.hpp
include/anyany/: anyany.hpp  anyany_macro.hpp  data_parallel_vector.hpp  type_descriptor.hpp  utility.hpp  visit_invoke.hpp
include/anyany/noexport/: anyany_details.hpp  common.hpp  data_parallel_vector_details.hpp  file_begin.hpp  file_end.hpp  type_descriptor_details.hpp  variant_swarm_details.hpp  visit_invoke_details.hpp
include/noexport/: anyany_details.hpp  data_parallel_details.hpp  data_parallel_vector_details.hpp  fake_source.cpp  type_descriptor_details.hpp  variant_swarm_details.hpp  visit_invoke_details.hpp
tests/: CMakeLists.txt  test_anyany.cpp  test_data_parallel.cpp  test_data_parallel_vector.cpp  test_memory_resource.cpp  test_utilities.cpp  test_variant_swarm.cpp  test_visit_invoke.cpp
